[xla:cpu] Add a flag to enable XNNPACK operations in XLA and connect XnnDotThunk to ThunkEmitter
PiperOrigin-RevId: 707236616

--- a/tensorflow/tools/lib_package/BUILD
+++ b/tensorflow/tools/lib_package/BUILD
@@ -198,6 +198,7 @@ genrule(
         "@tf_runtime//:LICENSE",
         "@local_tsl//:LICENSE",
         "@local_xla//:LICENSE",
+        "@XNNPACK//:LICENSE",
     ] + select({
         "//tensorflow:android": [],
         "//tensorflow:ios": [],
